fix footer spacing

--- a/styles.css
+++ b/styles.css
@@ -526,6 +526,10 @@ main__img--container {
 }
 
 /*** Social Media Icons Footer Styles ***/
+
+#footer__logo {
+    margin-right: 20px;
+}
 .social__icon--link {
     color: #fff;
     font-size: 24px;
@@ -566,6 +570,7 @@ main__img--container {
 
 .website__rights {
     color: #fff;
+text-align: center;
 }
 
 /*** Media Query Footer Styles ***/
